# ml-example-app

./: .dockerignore  .gitignore  README.md  cascaded_detection_plan.txt  convert_yolox_to_onnx.py  docker-compose.yml  download_mit_models.py  download_models.sh
backend/: Dockerfile  README.md  TRAINING_GUIDE.md  export_onnx.py  main.py  prepare_dataset.py  pyproject.toml  train_custom.py  yolox_detector.py
backend/.claude/: settings.local.json
backend/detectors/: __init__.py  yolov9_detector.py  yolox_detector.py
backend/models/: README.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/components/: image-upload.tsx  image-viewer.tsx  inference-container.tsx
