[project]
name = "fastapi-yolo-app"
version = "0.1.0"
description = "FastAPI app with YOLOv9 image inference"
authors = [
    {name = "User"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn (>=0.36.0,<0.37.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pillow (>=11.3.0,<12.0.0)",
    "onnxruntime (>=1.22.1,<2.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"